# SFWRENG-3K04

./: simulink_group17f.slx
DCM/DCM_DELIV1/: CMakeLists.txt  database.cpp  database.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pacemakerlink.cpp  pacemakerlink.h  parameterform.cpp  parameterform.h  parameterform.ui  serialmanager.cpp  serialmanager.h  serialtestdialog.cpp  serialtestdialog.h
DCM/REMAKE PLEASE WORK/: CMakeLists.txt  database.cpp  database.h  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pacemakerlink.cpp  parameterform.cpp  parameterform.h  parameterform.ui  serialmanager.cpp  serialmanager.h  serialtestdialog.cpp  serialtestdialog.h  serialtestdialog.ui
DCM/i give up/: main.py  users.json
DCM/i give up/dcm_app/controllers/: app_controller.py
DCM/i give up/dcm_app/models/: egram.py  parameters.py  user.py
DCM/i give up/dcm_app/services/: parameter_storage.py  serial_manager.py  user_storage.py  validation.py
DCM/i give up/dcm_app/views/: base_frame.py  device_info_tab.py  egram_tab.py  main_view.py  modes_tab.py  parameters_tab.py  welcome_view.py
DCM/i give up/params/: tes.json  test.json  test1.json
simulink/: Deliverable1_3K04.slx  simulink_group17.slx
